--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "clavethotel-remix"
-compatibility_flags = [ "nodejs_compat" ]
+compatibility_flags = [ "node_compat" ]
 compatibility_date = "2024-10-22"
 pages_build_output_dir = "./build/client"
 
