--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/react": "^2.13.1",
     "@supabase/supabase-js": "^2.46.1",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.473.0",
     "marked": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
